add checkbox icons

--- a/src/app/components/skills/beacon-skill/beacon-skill.component.html
+++ b/src/app/components/skills/beacon-skill/beacon-skill.component.html
@@ -83,13 +83,13 @@
           <div>
             <mat-button-toggle-group [value]="upgrade.buffs.Absorption.active">
               <mat-button-toggle [value]="true" matTooltip="Activate">
-                <mat-icon>check_box</mat-icon>
+               <mat-icon svgIcon="check_box">check_box</mat-icon>
               </mat-button-toggle>
               <mat-button-toggle [value]="null" matTooltip="Don't change">
-                <mat-icon>indeterminate_check_box</mat-icon>
+               <mat-icon svgIcon="indeterminate_check_box">indeterminate_check_box</mat-icon>
               </mat-button-toggle>
               <mat-button-toggle [value]="false" matTooltip="Deactivate">
-                <mat-icon>check_box_outline_blank</mat-icon>
+               <mat-icon svgIcon="check_box_outline_blank">check_box_outline_blank</mat-icon>
               </mat-button-toggle>
             </mat-button-toggle-group>
             <span>Absorbtion</span>
@@ -110,13 +110,13 @@
           <div>
             <mat-button-toggle-group [value]="upgrade.buffs.FireResistance.active">
               <mat-button-toggle [value]="true" matTooltip="Activate">
-                <mat-icon>check_box</mat-icon>
+               <mat-icon svgIcon="check_box">check_box</mat-icon>
               </mat-button-toggle>
               <mat-button-toggle [value]="null" matTooltip="Don't change">
-                <mat-icon>indeterminate_check_box</mat-icon>
+               <mat-icon svgIcon="indeterminate_check_box">indeterminate_check_box</mat-icon>
               </mat-button-toggle>
               <mat-button-toggle [value]="false" matTooltip="Deactivate">
-                <mat-icon>check_box_outline_blank</mat-icon>
+               <mat-icon svgIcon="check_box_outline_blank">check_box_outline_blank</mat-icon>
               </mat-button-toggle>
             </mat-button-toggle-group>
             <span>Fire Resistance</span>
@@ -129,13 +129,13 @@
           <div>
             <mat-button-toggle-group [value]="upgrade.buffs.Haste.active">
               <mat-button-toggle [value]="true" matTooltip="Activate">
-                <mat-icon>check_box</mat-icon>
+               <mat-icon svgIcon="check_box">check_box</mat-icon>
               </mat-button-toggle>
               <mat-button-toggle [value]="null" matTooltip="Don't change">
-                <mat-icon>indeterminate_check_box</mat-icon>
+               <mat-icon svgIcon="indeterminate_check_box">indeterminate_check_box</mat-icon>
               </mat-button-toggle>
               <mat-button-toggle [value]="false" matTooltip="Deactivate">
-                <mat-icon>check_box_outline_blank</mat-icon>
+               <mat-icon svgIcon="check_box_outline_blank">check_box_outline_blank</mat-icon>
               </mat-button-toggle>
             </mat-button-toggle-group>
             <span>Haste</span>
@@ -156,13 +156,13 @@
           <div>
             <mat-button-toggle-group [value]="upgrade.buffs.HealthBoost.active">
               <mat-button-toggle [value]="true" matTooltip="Activate">
-                <mat-icon>check_box</mat-icon>
+               <mat-icon svgIcon="check_box">check_box</mat-icon>
               </mat-button-toggle>
               <mat-button-toggle [value]="null" matTooltip="Don't change">
-                <mat-icon>indeterminate_check_box</mat-icon>
+               <mat-icon svgIcon="indeterminate_check_box">indeterminate_check_box</mat-icon>
               </mat-button-toggle>
               <mat-button-toggle [value]="false" matTooltip="Deactivate">
-                <mat-icon>check_box_outline_blank</mat-icon>
+               <mat-icon svgIcon="check_box_outline_blank">check_box_outline_blank</mat-icon>
               </mat-button-toggle>
             </mat-button-toggle-group>
             <span>Health Boost</span>
@@ -183,13 +183,13 @@
           <div>
             <mat-button-toggle-group [value]="upgrade.buffs.JumpBoost.active">
               <mat-button-toggle [value]="true" matTooltip="Activate">
-                <mat-icon>check_box</mat-icon>
+               <mat-icon svgIcon="check_box">check_box</mat-icon>
               </mat-button-toggle>
               <mat-button-toggle [value]="null" matTooltip="Don't change">
-                <mat-icon>indeterminate_check_box</mat-icon>
+               <mat-icon svgIcon="indeterminate_check_box">indeterminate_check_box</mat-icon>
               </mat-button-toggle>
               <mat-button-toggle [value]="false" matTooltip="Deactivate">
-                <mat-icon>check_box_outline_blank</mat-icon>
+               <mat-icon svgIcon="check_box_outline_blank">check_box_outline_blank</mat-icon>
               </mat-button-toggle>
             </mat-button-toggle-group>
             <span>Jump Boost</span>
@@ -210,13 +210,13 @@
           <div>
             <mat-button-toggle-group [value]="upgrade.buffs.Luck.active">
               <mat-button-toggle [value]="true" matTooltip="Activate">
-                <mat-icon>check_box</mat-icon>
+               <mat-icon svgIcon="check_box">check_box</mat-icon>
               </mat-button-toggle>
               <mat-button-toggle [value]="null" matTooltip="Don't change">
-                <mat-icon>indeterminate_check_box</mat-icon>
+               <mat-icon svgIcon="indeterminate_check_box">indeterminate_check_box</mat-icon>
               </mat-button-toggle>
               <mat-button-toggle [value]="false" matTooltip="Deactivate">
-                <mat-icon>check_box_outline_blank</mat-icon>
+               <mat-icon svgIcon="check_box_outline_blank">check_box_outline_blank</mat-icon>
               </mat-button-toggle>
             </mat-button-toggle-group>
             <span>Luck</span>
@@ -229,13 +229,13 @@
           <div>
             <mat-button-toggle-group [value]="upgrade.buffs.NightVision.active">
               <mat-button-toggle [value]="true" matTooltip="Activate">
-                <mat-icon>check_box</mat-icon>
+               <mat-icon svgIcon="check_box">check_box</mat-icon>
               </mat-button-toggle>
               <mat-button-toggle [value]="null" matTooltip="Don't change">
-                <mat-icon>indeterminate_check_box</mat-icon>
+               <mat-icon svgIcon="indeterminate_check_box">indeterminate_check_box</mat-icon>
               </mat-button-toggle>
               <mat-button-toggle [value]="false" matTooltip="Deactivate">
-                <mat-icon>check_box_outline_blank</mat-icon>
+               <mat-icon svgIcon="check_box_outline_blank">check_box_outline_blank</mat-icon>
               </mat-button-toggle>
             </mat-button-toggle-group>
             <span>Night Vision</span>
@@ -248,13 +248,13 @@
           <div>
             <mat-button-toggle-group [value]="upgrade.buffs.Resistance.active">
               <mat-button-toggle [value]="true" matTooltip="Activate">
-                <mat-icon>check_box</mat-icon>
+               <mat-icon svgIcon="check_box">check_box</mat-icon>
               </mat-button-toggle>
               <mat-button-toggle [value]="null" matTooltip="Don't change">
-                <mat-icon>indeterminate_check_box</mat-icon>
+               <mat-icon svgIcon="indeterminate_check_box">indeterminate_check_box</mat-icon>
               </mat-button-toggle>
               <mat-button-toggle [value]="false" matTooltip="Deactivate">
-                <mat-icon>check_box_outline_blank</mat-icon>
+               <mat-icon svgIcon="check_box_outline_blank">check_box_outline_blank</mat-icon>
               </mat-button-toggle>
             </mat-button-toggle-group>
             <span>Resistance</span>
@@ -275,13 +275,13 @@
           <div>
             <mat-button-toggle-group [value]="upgrade.buffs.Speed.active">
               <mat-button-toggle [value]="true" matTooltip="Activate">
-                <mat-icon>check_box</mat-icon>
+               <mat-icon svgIcon="check_box">check_box</mat-icon>
               </mat-button-toggle>
               <mat-button-toggle [value]="null" matTooltip="Don't change">
-                <mat-icon>indeterminate_check_box</mat-icon>
+               <mat-icon svgIcon="indeterminate_check_box">indeterminate_check_box</mat-icon>
               </mat-button-toggle>
               <mat-button-toggle [value]="false" matTooltip="Deactivate">
-                <mat-icon>check_box_outline_blank</mat-icon>
+               <mat-icon svgIcon="check_box_outline_blank">check_box_outline_blank</mat-icon>
               </mat-button-toggle>
             </mat-button-toggle-group>
             <span>Speed</span>
@@ -302,13 +302,13 @@
           <div>
             <mat-button-toggle-group [value]="upgrade.buffs.Strength.active">
               <mat-button-toggle [value]="true" matTooltip="Activate">
-                <mat-icon>check_box</mat-icon>
+               <mat-icon svgIcon="check_box">check_box</mat-icon>
               </mat-button-toggle>
               <mat-button-toggle [value]="null" matTooltip="Don't change">
-                <mat-icon>indeterminate_check_box</mat-icon>
+               <mat-icon svgIcon="indeterminate_check_box">indeterminate_check_box</mat-icon>
               </mat-button-toggle>
               <mat-button-toggle [value]="false" matTooltip="Deactivate">
-                <mat-icon>check_box_outline_blank</mat-icon>
+               <mat-icon svgIcon="check_box_outline_blank">check_box_outline_blank</mat-icon>
               </mat-button-toggle>
             </mat-button-toggle-group>
             <span>Strength</span>
@@ -329,13 +329,13 @@
           <div>
             <mat-button-toggle-group [value]="upgrade.buffs.WaterBreathing.active">
               <mat-button-toggle [value]="true" matTooltip="Activate">
-                <mat-icon>check_box</mat-icon>
+               <mat-icon svgIcon="check_box">check_box</mat-icon>
               </mat-button-toggle>
               <mat-button-toggle [value]="null" matTooltip="Don't change">
-                <mat-icon>indeterminate_check_box</mat-icon>
+               <mat-icon svgIcon="indeterminate_check_box">indeterminate_check_box</mat-icon>
               </mat-button-toggle>
               <mat-button-toggle [value]="false" matTooltip="Deactivate">
-                <mat-icon>check_box_outline_blank</mat-icon>
+               <mat-icon svgIcon="check_box_outline_blank">check_box_outline_blank</mat-icon>
               </mat-button-toggle>
             </mat-button-toggle-group>
             <span>Water Breathing</span>
