--- a/src/app/components/skills/behavior-skill/behavior-skill.component.html
+++ b/src/app/components/skills/behavior-skill/behavior-skill.component.html
@@ -9,13 +9,13 @@
     <div>
       <mat-button-toggle-group [value]="upgrade.friend">
         <mat-button-toggle [value]="true" matTooltip="Activate">
-          <mat-icon>check_box</mat-icon>
+          <mat-icon svgIcon="check_box">check_box</mat-icon>
         </mat-button-toggle>
         <mat-button-toggle [value]="null" matTooltip="Don't change">
-          <mat-icon>indeterminate_check_box</mat-icon>
+          <mat-icon svgIcon="indeterminate_check_box">indeterminate_check_box</mat-icon>
         </mat-button-toggle>
         <mat-button-toggle [value]="false" matTooltip="Deactivate">
-          <mat-icon>check_box_outline_blank</mat-icon>
+          <mat-icon svgIcon="check_box_outline_blank">check_box_outline_blank</mat-icon>
         </mat-button-toggle>
       </mat-button-toggle-group>
       <span>Friendly Mode</span>
@@ -23,13 +23,13 @@
     <div>
       <mat-button-toggle-group [value]="upgrade.aggro">
         <mat-button-toggle [value]="true" matTooltip="Activate">
-          <mat-icon>check_box</mat-icon>
+          <mat-icon svgIcon="check_box">check_box</mat-icon>
         </mat-button-toggle>
         <mat-button-toggle [value]="null" matTooltip="Don't change">
-          <mat-icon>indeterminate_check_box</mat-icon>
+          <mat-icon svgIcon="indeterminate_check_box">indeterminate_check_box</mat-icon>
         </mat-button-toggle>
         <mat-button-toggle [value]="false" matTooltip="Deactivate">
-          <mat-icon>check_box_outline_blank</mat-icon>
+          <mat-icon svgIcon="check_box_outline_blank">check_box_outline_blank</mat-icon>
         </mat-button-toggle>
       </mat-button-toggle-group>
       <span>Aggressive Mode</span>
@@ -37,13 +37,13 @@
     <div>
       <mat-button-toggle-group [value]="upgrade.farm">
         <mat-button-toggle [value]="true" matTooltip="Activate">
-          <mat-icon>check_box</mat-icon>
+          <mat-icon svgIcon="check_box">check_box</mat-icon>
         </mat-button-toggle>
         <mat-button-toggle [value]="null" matTooltip="Don't change">
-          <mat-icon>indeterminate_check_box</mat-icon>
+          <mat-icon svgIcon="indeterminate_check_box">indeterminate_check_box</mat-icon>
         </mat-button-toggle>
         <mat-button-toggle [value]="false" matTooltip="Deactivate">
-          <mat-icon>check_box_outline_blank</mat-icon>
+          <mat-icon svgIcon="check_box_outline_blank">check_box_outline_blank</mat-icon>
         </mat-button-toggle>
       </mat-button-toggle-group>
       <span>Farm Mode</span>
@@ -51,13 +51,13 @@
     <div>
       <mat-button-toggle-group [value]="upgrade.raid">
         <mat-button-toggle [value]="true" matTooltip="Activate">
-          <mat-icon>check_box</mat-icon>
+          <mat-icon svgIcon="check_box">check_box</mat-icon>
         </mat-button-toggle>
         <mat-button-toggle [value]="null" matTooltip="Don't change">
-          <mat-icon>indeterminate_check_box</mat-icon>
+          <mat-icon svgIcon="indeterminate_check_box">indeterminate_check_box</mat-icon>
         </mat-button-toggle>
         <mat-button-toggle [value]="false" matTooltip="Deactivate">
-          <mat-icon>check_box_outline_blank</mat-icon>
+          <mat-icon svgIcon="check_box_outline_blank">check_box_outline_blank</mat-icon>
         </mat-button-toggle>
       </mat-button-toggle-group>
       <span>Raid Mode</span>
@@ -65,13 +65,13 @@
     <div>
       <mat-button-toggle-group [value]="upgrade.duel">
         <mat-button-toggle [value]="true" matTooltip="Activate">
-          <mat-icon>check_box</mat-icon>
+          <mat-icon svgIcon="check_box">check_box</mat-icon>
         </mat-button-toggle>
         <mat-button-toggle [value]="null" matTooltip="Don't change">
-          <mat-icon>indeterminate_check_box</mat-icon>
+          <mat-icon svgIcon="indeterminate_check_box">indeterminate_check_box</mat-icon>
         </mat-button-toggle>
         <mat-button-toggle [value]="false" matTooltip="Deactivate">
-          <mat-icon>check_box_outline_blank</mat-icon>
+          <mat-icon svgIcon="check_box_outline_blank">check_box_outline_blank</mat-icon>
         </mat-button-toggle>
       </mat-button-toggle-group>
       <span>Duel Mode</span>
