--- a/src/app/components/skills/ride-skill/ride-skill.component.html
+++ b/src/app/components/skills/ride-skill/ride-skill.component.html
@@ -53,13 +53,13 @@
     <div>
       <mat-button-toggle-group [value]="upgrade.canFly">
         <mat-button-toggle [value]="true" matTooltip="Activate">
-          <mat-icon>check_box</mat-icon>
+          <mat-icon svgIcon="check_box">check_box</mat-icon>
         </mat-button-toggle>
         <mat-button-toggle [value]="null" matTooltip="Don't change">
-          <mat-icon>indeterminate_check_box</mat-icon>
+          <mat-icon svgIcon="indeterminate_check_box">indeterminate_check_box</mat-icon>
         </mat-button-toggle>
         <mat-button-toggle [value]="false" matTooltip="Deactivate">
-          <mat-icon>check_box_outline_blank</mat-icon>
+          <mat-icon svgIcon="check_box_outline_blank">check_box_outline_blank</mat-icon>
         </mat-button-toggle>
       </mat-button-toggle-group>
       <span>Can Fly?</span>
